# inherited-variant-pipeline

./: .gitignore  README.md  pyproject.toml  run.py
src/inherited/: __init__.py  __main__.py  af.py  analyze.py  checkpoint.py  classify.py  cli.py  constants.py  debug.py  families.py  genotype.py  output.py
tests/: test_analyze.py  test_core.py  test_debug.py  test_output.py
tests/fixtures/: families.tsv  gnomad_af.json  tiny.vcf  tiny_af.json
